# VideoF2B

./: .gitignore  .pylintrc  .readthedocs.yml  CamCalibration.py  CamCalibration_02.py  CamLocator.py  Camera.py  Detection.py  Drawing.py  README.md  Video.py  VideoF2B.py  VideoF2B.spec  VideoF2B_v0_5.py  build.bat  build.sh  calibration_fisheye.py  common.py  custom_commands.py  figure_tracker.py  figures.py  geometry.py  projection.py  pyproject.toml  requirements-dev.txt  requirements-win.txt  requirements.txt  requirements_windows.txt  setup.cfg  setup.py  test_geometry.py
docs/: apidoc-gen.bat  apidoc-gen.sh
docs/source/: camera-calibration.rst  camera-placement.rst  cheatsheet.rst  conf.py  dev_guide.rst  editing-guide.rst  faq.rst  field-setup.rst  figure_geometry.rst  figure_tracking.rst  glossary.rst  help.rst  index.rst  installing.rst  interface.rst  loading-flight.rst  locating-flight.rst  producing-calibrated.rst  producing-uncalibrated.rst  user-controls-ar.rst  user-controls.rst  using.rst  world-coordinate-system.rst
docs/source/api/: modules.rst  videof2b.core.common.rst  videof2b.core.rst  videof2b.rst  videof2b.ui.rst
docs/source/static/css/: videof2b.css
docs/source/tex/: cs-cartesian.tex  cs-spherical-elevation.tex
resources/art/: icons-source.txt
resources/cal/: pattern_gen_howto.txt
scripts/: read-camera.py
tests/: README.md  test_drawing.py  test_geometry.py
tests/core/: test_camera_director.py  test_drawing.py  test_geometry.py
tests/data/: CamCalibration_SONY_A7C_14mm.npz
videof2b/: CamCalibration.py  CamLocator.py  Camera.py  Video.py  __init__.py  __main__.py  app.py  calibration_fisheye.py  crash_handler.py  figures.py
videof2b/core/: __init__.py  calibration.py  camera.py  camera_director.py  detection.py  drawing.py  figure_tracker.py  figures.py  flight.py  geometry.py  imaging.py  processor.py  projection.py
videof2b/core/common/: __init__.py  path.py  settings.py  singleton.py  store.py
videof2b/ui/: __init__.py  about_window.py  camera_cal_dialog.py  camera_director_dialog.py  exception_dialog.py  exception_form.py  icons.py  load_flight_dialog.py  main_window.py  style.py  video_load_dialog.py  video_window.py  widgets.py
