# -*- coding: utf-8 -*-
# VideoF2B - Draw F2B figures from video
# Copyright (C) 2021  Andrey Vasilik - basil96@users.noreply.github.com
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = VideoF2B
version = attr: videof2b.version.version
description = Draw F2B figures from video.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = open, source, video, hobby, aeromodeling, f2b, stunt, flight, tracing, competition, judging, scoring
author = Alberto Solera
author_email = albertoavion(a)gmail.com
project_urls =
    main = http://videof2b.blogspot.com/
    dev = https://github.com/alsolera/VideoF2B
license = GPL-3.0-or-later
# Classifiers from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Desktop Environment :: Gnome
    Topic :: Desktop Environment :: K Desktop Environment (KDE)
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Multimedia :: Video
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    # For code formatting to PEP 8
    autopep8
    # To list a private GitHub repo as a dependency, see the following:
    # https://stackoverflow.com/questions/18026980/python-setuptools-how-can-i-list-a-private-repository-under-install-requires
    imutils @ git+https://github.com/basil96/imutils.git@dev
    numpy >= 1.21
    platformdirs >= 2.3
    opencv-python >= 4.5.3;platform_system=='Windows'
    # For building frozen executables
    pyinstaller >= 4.5.1
    PySide6 >= 6.1
    pylint
    pytest
    # pytest-qt
    qtawesome >= 1.1.0
    scipy >= 1.7

[options.packages.find]
include = videof2b
exclude = tests*

[options.extras_require]
diag =
    # For diagnostic plots. WARNING: This is a fresh beta, but allegedly supports PySide6.
    matplotlib ~= 3.5.0b1

[options.entry_points]
gui_scripts =
    videof2b = videof2b.__main__:main
# Builds the main executable for distribution.
# To invoke, do `python setup.py build_exe` from command line.
distutils.commands =
    build_exe = custom_commands:BuildPyiExe
